WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269879
WebKit engineering builds intermittently fail on newer SDK versions
https://bugs.webkit.org/show_bug.cgi?id=269879
Summary
WebKit engineering builds intermittently fail on newer SDK versions
Wenson Hsieh
Reported
2024-02-21 16:51:00 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-02-21 16:58:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24910
EWS
Comment 2
2024-02-21 23:18:45 PST
Committed
275154@main
(27713ed79edd): <
https://commits.webkit.org/275154@main
> Reviewed commits have been landed. Closing PR #24910 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-21 23:19:12 PST
<
rdar://problem/123426004
>
Wenson Hsieh
Comment 4
2024-02-23 09:10:30 PST
Reopening, since this was reverted in
275177@main
Wenson Hsieh
Comment 5
2024-02-23 09:11:21 PST
(Also, retitling to clarify the actual symptoms of this issue)
Wenson Hsieh
Comment 6
2024-02-23 11:02:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25021
EWS
Comment 7
2024-02-25 16:12:52 PST
Committed
275299@main
(95f2938cac22): <
https://commits.webkit.org/275299@main
> Reviewed commits have been landed. Closing PR #25021 and removing active labels.
Wenson Hsieh
Comment 8
2024-02-26 22:06:02 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/25156
EWS
Comment 9
2024-02-27 09:06:09 PST
Committed
275388@main
(931ae3fdc8f2): <
https://commits.webkit.org/275388@main
> Reviewed commits have been landed. Closing PR #25156 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug