Source/WebKit/UIProcess/Cocoa/TextExtraction/WKTextExtractionItem.h
@@ -25,6 +25,8 @@
 
 #pragma once
 
+#if ENABLE(TEXT_EXTRACTION_SUPPORT)
+
 #import <CoreGraphics/CoreGraphics.h>
 #import <Foundation/Foundation.h>
 
@@ -87,3 +89,5 @@ typedef NS_ENUM(NSInteger, WKTextExtractionContainer) {
 - (void)fulfill:(WKTextExtractionItem *)result;
 @property (nonatomic, readonly) CGRect rectInWebView;
 @end
+
+#endif // ENABLE(TEXT_EXTRACTION_SUPPORT)
