Source/WebKit/UIProcess/Cocoa/TextExtraction/WKTextExtractionItem.swift
@@ -23,8 +23,7 @@
 
 import Foundation
 
-@available(iOS 17.0, macOS 12.0, *)
-@objc(WKTextExtractionItem) public class WKTextExtractionItem: NSObject {
+@objc(WKTextExtractionItem) class WKTextExtractionItem: NSObject {
     @objc public let rectInRootView: CGRect
     @objc public let children: [WKTextExtractionItem]
 
@@ -34,8 +33,7 @@ import Foundation
     }
 }
 
-@available(iOS 17.0, macOS 12.0, *)
-@objc public enum WKTextExtractionContainer: Int {
+@objc enum WKTextExtractionContainer: Int {
     case root
     case viewportConstrained
     case list
@@ -47,8 +45,7 @@ import Foundation
     case button
 }
 
-@available(iOS 17.0, macOS 12.0, *)
-@objc(WKTextExtractionContainerItem) public class WKTextExtractionContainerItem: WKTextExtractionItem {
+@objc(WKTextExtractionContainerItem) class WKTextExtractionContainerItem: WKTextExtractionItem {
     @objc public let container: WKTextExtractionContainer
 
     @objc public init(container: WKTextExtractionContainer, rectInRootView: CGRect, children: [WKTextExtractionItem]) {
@@ -57,8 +54,7 @@ import Foundation
     }
 }
 
-@available(iOS 17.0, macOS 12.0, *)
-@objc(WKTextExtractionEditable) public class WKTextExtractionEditable: NSObject {
+@objc(WKTextExtractionEditable) class WKTextExtractionEditable: NSObject {
     @objc public let label: String
     @objc public let placeholder: String
     @objc public let isSecure: Bool
@@ -72,8 +68,7 @@ import Foundation
     }
 }
 
-@available(iOS 17.0, macOS 12.0, *)
-@objc(WKTextExtractionLink) public class WKTextExtractionLink: NSObject {
+@objc(WKTextExtractionLink) class WKTextExtractionLink: NSObject {
     @objc public let url: NSURL
     @objc public let range: NSRange
 
@@ -83,8 +78,7 @@ import Foundation
     }
 }
 
-@available(iOS 17.0, macOS 12.0, *)
-@objc(WKTextExtractionTextItem) public class WKTextExtractionTextItem: WKTextExtractionItem {
+@objc(WKTextExtractionTextItem) class WKTextExtractionTextItem: WKTextExtractionItem {
     @objc public let content: String
     @objc public let selectedRange: NSRange
     @objc public let links: [WKTextExtractionLink]
@@ -99,8 +93,7 @@ import Foundation
     }
 }
 
-@available(iOS 17.0, macOS 12.0, *)
-@objc(WKTextExtractionScrollableItem) public class WKTextExtractionScrollableItem: WKTextExtractionItem {
+@objc(WKTextExtractionScrollableItem) class WKTextExtractionScrollableItem: WKTextExtractionItem {
     @objc public let contentSize: CGSize
 
     @objc public init(contentSize: CGSize, rectInRootView: CGRect, children: [WKTextExtractionItem]) {
@@ -109,8 +102,7 @@ import Foundation
     }
 }
 
-@available(iOS 17.0, macOS 12.0, *)
-@objc(WKTextExtractionImageItem) public class WKTextExtractionImageItem: WKTextExtractionItem {
+@objc(WKTextExtractionImageItem) class WKTextExtractionImageItem: WKTextExtractionItem {
     @objc public let name: String
     @objc public let altText: String
 
